--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "library and API for working with the i-ching",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -21,7 +23,17 @@
     "seedrandom": "^3.0.5"
   },
   "devDependencies": {
-    "expect": "^1.20.2",
-    "mocha": "^3.4.2"
+    "jest": "^29.7.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/test/**/*.test.js"
+    ],
+    "collectCoverageFrom": [
+      "lib/**/*.js",
+      "!lib/data.json"
+    ],
+    "verbose": true
   }
 }
